Fix creation of TaskScheduler in OneShotAccessibilityTreeSearchTest

The previous creation of TaskScheduler didn't work with other tests in
the same batch using ScopedTaskEnvironment because it wasn't tearing
down its created instance. Instead of fixing that, switch to using
ScopedTaskEnvironment as this fixture doesn't have any special
requirements.

This showed up as flake on Fuchsia, but is cross-platform.

Bug: 759245, 754861
Change-Id: I21b3121a7f971064efa82d352071cce0ae29629b